--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": ">=1.2.*",
     "angular-bootstrap": "~0.11.0",
     "font-awesome": ">=4.1.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "satellizer": "~0.12.5"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
