--- a/package.json
+++ b/package.json
@@ -3,24 +3,31 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
-    "express": "~4.9.0",
-    "morgan": "~1.0.0",
+    "async": "^1.5.0",
     "body-parser": "~1.5.0",
-    "method-override": "~1.0.0",
-    "serve-favicon": "~2.0.1",
-    "cookie-parser": "~1.0.1",
-    "express-session": "~1.0.2",
-    "errorhandler": "~1.0.0",
-    "compression": "~1.0.1",
-    "lodash": "~2.4.1",
-    "ejs": "~0.8.4",
-    "mongoose": "~4.0.3",
-    "jsonwebtoken": "^5.0.0",
-    "express-jwt": "^3.0.0",
+    "cheerio": "*",
     "composable-middleware": "^0.3.0",
+    "compression": "~1.0.1",
     "connect-mongo": "^0.8.1",
-    "request": "*",
-    "cheerio": "*"
+    "cookie-parser": "~1.0.1",
+    "cors": "^2.7.1",
+    "ejs": "~0.8.4",
+    "errorhandler": "~1.0.0",
+    "express": "~4.9.0",
+    "express-jwt": "^3.0.0",
+    "express-session": "~1.0.2",
+    "jsonwebtoken": "^5.0.0",
+    "jwt-simple": "^0.3.1",
+    "lodash": "~2.4.1",
+    "method-override": "~1.0.0",
+    "moment": "^2.10.6",
+    "mongoose": "~4.0.3",
+    "morgan": "^1.0.1",
+    "passport-github": "^1.0.0",
+    "passport-github2": "^0.1.9",
+    "request": "^2.65.0",
+    "satellizer": "^0.12.5",
+    "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
     "connect-livereload": "~0.4.0",
